--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "graphql": "^16.6.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
