--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "apollo-upload-client": "^17.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "graphql": "^16.6.0",
     "next": "13.4.3",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-infinite-scroller": "^1.2.6",
+    "react-quill": "^2.0.0",
+    "react-slick": "^0.29.0",
+    "recoil": "^0.7.7",
     "swiper": "^9.3.2"
   }
 }
