--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.1",
