--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.5.1",
     "apollo-upload-client": "^17.0.0",
     "dayjs": "^1.11.7",
     "eslint": "8.41.0",
