--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.1",
+    "apollo-link-context": "^1.0.20",
     "apollo-upload-client": "^17.0.0",
     "dayjs": "^1.11.7",
     "eslint": "8.41.0",
